add some jekyll stuff

--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>_WEBSITE TRIALS</title>
-</head>
-<body>
-
+---
+layout: default
+title: _Website Trials
+---
 <h1>_WEBSITE TRIALS</h1>
-
-</body>
-</html>
